--- a/package.json
+++ b/package.json
@@ -22,11 +22,23 @@
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/file": "^4.7.0",
+    "@ionic-native/file-chooser": "^4.7.0",
+    "@ionic-native/file-path": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.6.0",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-filechooser": "^1.0.1",
+    "cordova-plugin-filepath": "^1.3.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.2.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.12.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -38,5 +50,20 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
