--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.6.0",
     "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-filechooser": "^1.0.1",
@@ -63,7 +64,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
