--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
+    "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/diagnostic": "^4.7.0",
     "@ionic-native/file": "^4.7.0",
     "@ionic-native/file-chooser": "^4.7.0",
     "@ionic-native/file-path": "^4.7.0",
+    "@ionic-native/image-resizer": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/pro": "1.0.20",
@@ -32,6 +35,7 @@
     "angularfire2": "^5.0.0-rc.6.0",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-filechooser": "^1.0.1",
@@ -40,9 +44,12 @@
     "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova.plugins.diagnostic": "^4.0.5",
     "desktop": "0.1.0",
     "firebase": "^4.12.1",
+    "info.protonet.imageresizer": "^0.1.1",
     "ionic-angular": "3.9.2",
+    "ionic-img-viewer": "^2.9.0",
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
@@ -62,7 +69,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {},
+      "info.protonet.imageresizer": {},
+      "cordova.plugins.diagnostic": {}
     },
     "platforms": [
       "android",
