--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "firebase": "^4.12.1",
     "info.protonet.imageresizer": "^0.1.1",
     "ionic-angular": "3.9.2",
-    "ionic-img-viewer": "^2.9.0",
+    "ionic-img-viewer": "^2.8.0",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.8",
+    "rxjs": "^5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
