--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@angular/core": "5.2.9",
     "@angular/forms": "5.2.9",
     "@angular/http": "5.2.9",
+    "@angular/language-service": "^5.2.10",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
+    "@cloudinary/angular": "^2.1.1",
+    "@cloudinary/angular-4.x": "^1.1.0",
+    "@cloudinary/angular-5.x": "^1.0.1",
     "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.6.0",
     "@ionic-native/diagnostic": "^4.7.0",
@@ -33,6 +37,8 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.6.0",
+    "cloudinary": "^1.11.0",
+    "cloudinary-core": "^2.5.0",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-camera": "^4.0.3",
@@ -57,6 +63,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
+    "@types/node": "^9.6.6",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
